[metadata]
name = kernel_driver
version = attr: kernel_driver.__version__
description = A Jupyter kernel driver
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/davidbrochart/kernel_driver
platforms = Windows, Linux, Mac OS X
keywords = jupyter

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  pyzmq
  python-dateutil
  rich

[options.extras_require]
test =
  types-python-dateutil
  xeus-python
  ipykernel
  akernel
  pytest
  pytest-asyncio
  mypy
  flake8
  black

[flake8]
max-line-length = 100
